fixed spacing for footer

--- a/style.css
+++ b/style.css
@@ -48,3 +48,8 @@ div.card-body:focus {
 .card-text {
   margin-top: 20px;
 }
+footer {
+  text-align: center;
+  padding: 10px;
+  padding: 10px;
+}
